--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,8 +1,9 @@
-.indexClass{
+.indexClass {
     display: flex;
     justify-content: center;
 }
-.aClass{
+
+.aClass {
     margin: 50px;
     align-items: center;
 }
@@ -13,6 +14,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
 }
+
 main {
     flex: 1;
     padding-bottom: 160px;
@@ -22,42 +24,28 @@ main {
     position: fixed;
     bottom: 0;
     width: 100%;
-    box-shadow: 0 -4px 5px rgb(219, 160, 32);
+    box-shadow: 0 -4px 5px red;
     background-color: black;
     margin-top: 50px;
-    transition: .8s ease all;
-    .grupo1{
+
+    .grupo1 {
         width: 100%;
         max-width: 1200px;
         margin: auto;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-gap: 50px;
         padding: 10px 0px;
         text-align: center;
         align-items: center;
-        .cajaFooter{
-            figure{
-                width: 100%;
-                height: 100%;
-                display: flex;
-                justify-content: center;
-                img{
-                    width: 60px;
-                }
-            }
-            h5{
-                color: rgb(219, 160, 32);
+
+        .cajaFooter {
+            h5 {
+                color: red;
                 margin-bottom: 25px;
                 font-size: 20px;
                 align-items: center;
             }
-            .parrafoFooter{
-                color: rgb(219, 160, 32);
-                margin-bottom: 10px;
-            }
-            .redes{
-                a{
+
+            .redes {
+                a {
                     display: inline-block;
                     text-decoration: none;
                     width: 45px;
@@ -65,18 +53,18 @@ main {
                     line-height: 45px;
                     color: rgb(0, 0, 0);
                     margin-right: 10px;
-                    background-color: rgb(219, 160, 32);
+                    background-color: red;
                     text-align: center;
-                    transition: all 300ms ease;
-                    &:hover{
-                        color:rgb(71, 255, 47);
+
+                    &:hover {
+                        color:white;
                     }
                 }
             }
         }
     }
-    
-    .grupo2{
+
+    .grupo2 {
         background-color: black;
         padding: 5px 10px;
         text-align: center;
@@ -84,30 +72,33 @@ main {
     }
 }
 
-.navbar-nav{
+.navbar-nav {
     align-items: center;
 }
-.navbar-dark .navbar-nav .nav-link:hover{
+
+.navbar-dark .navbar-nav .nav-link:hover {
     color: goldenrod;
 }
 
-.navbar-nav{
-    a{
-        img{
+.navbar-nav {
+    a {
+        img {
             max-width: 100px;
             border-radius: 15px;
         }
     }
 }
 
-.navbar-collapse{
+.navbar-collapse {
     justify-content: space-between;
 }
-.container-fluid{
+
+.container-fluid {
     max-width: 1140px;
 }
-.navbar-brand{
-    img{
+
+.navbar-brand {
+    img {
         border-radius: 10px;
     }
 }
