--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -102,3 +102,12 @@ main {
         border-radius: 10px;
     }
 }
+
+
+.profile-image {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
+    margin-left: 5px;
+}
