--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -3,32 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fanaticos de las Casacas</title>
+    <title>2da Pre Entrega</title>
     <link rel="stylesheet" href="../../css/{{style}}">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <main>
-        {{> navbar }}
-        {{#if user}}
-            <h3>Bienvenido, 
-                <strong>
-                    {{user.username}}
-                </strong>
-            </h3>
-        {{else}}
-            <p>
-                Inicia sesión para acceder a tu cuenta
-                <a href="/login" class="btn btn-info">Iniciar</a>
-            </p>
-        {{/if}}
+    {{> navbar }}
+    <main class="main-content">
         {{{body}}}
-        {{> footer }}
     </main>
+    {{> footer }}
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://kit.fontawesome.com/b74834922d.js"></script>
 </body>
