--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -4,8 +4,17 @@
             <div class="flash-message error">{{ this }}</div>
         {{/each}}
     {{/if}}
-    <div class="container">
-        <h2 class="mt-5">Iniciar Sesión</h2>
+    <div class="container" style="width:500px">
+        <h2 class="mt-5">Inicia sesión con tu cuenta</h2>
+        <p>No tienes una? <a href="/register">Registrate</a></p>
+        <br>
+        <div class="text-center">
+            <a href="/auth/github"><button class="btn btn-outline-secondary"><i class="fa-brands fa-github fa-beat" style="--fa-animation-duration: 5s;"></i> Ingresar con GitHub</button></a>
+            <a href="/auth/google"><button class="btn btn-outline-success"><i class="fa-brands fa-google fa-beat" style="--fa-animation-duration: 5s;"></i> Ingresar con Google</button></a>
+        </div>
+        <hr>
+        <br>
+        <h5>O puedes iniciar sesión con tu Email:</h5>
         <form action="/login" method="POST">
             <div class="mb-3">
                 <label for="email" class="form-label">Correo Electrónico</label>
@@ -17,6 +26,17 @@
             </div>
             <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
         </form>
-        <p class="mt-3">¿No tienes una cuenta? <a href="/register">Regístrate</a></p>
-    </div>
+        <br>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const urlParams = new URLSearchParams(window.location.search)
+            if (urlParams.has('success')) {
+                Swal.fire('¡Éxito!', urlParams.get('success'), 'success')
+            }
+            if (urlParams.has('error')) {
+                Swal.fire('Error', urlParams.get('error'), 'error')
+            }
+        })
+    </script>
 </body>
