--- a/src/views/partials/navbar.handlebars
+++ b/src/views/partials/navbar.handlebars
@@ -13,38 +13,78 @@
         </button>
 
         <!-- menu colapsable -->
-        <div class="collapse navbar-collapse" id="botonmenu">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link active" href="/">INICIO</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/products">PRODUCTOS</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/carts">CARRITO</a>
-                </li>
-                {{!-- <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">CARRITO</a>
-                    <ul class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
-                        <li>
-                            <a class="dropdown-item" href="#" id="viewCart">Ver carrito actual</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="#" id="createCart">Crear uno nuevo</a>
-                        </li>
-                    </ul>
-                </li> --}}
-            </ul>
+        <body>
+    {{#if user}}
+        <h3 class="text-center">Bienvenido, 
+            <strong>
+                {{user.first_name}}
+            </strong>
+        </h3>
+    {{else}}
+        <p>
+            Inicia sesión para poder comprar!
+            <a href="/login" class="btn btn-info">Iniciar</a>
+        </p>
+    {{/if}}
+    <div id="cart" data-cart-id="{{cart._id}}" class="container mt-5">
+        <h3 class="text-center">Carrito ID: {{cart._id}}</h3>
+        {{#if cart.products.length}}
+            <div class="row mt-4" style="width: 1000px;">
+                <div class="col">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col"></th>
+                                <th scope="col">Producto</th>
+                                <th scope="col">Descripción</th>
+                                <th scope="col">Precio</th>
+                                <th scope="col">Cantidad</th>
+                                <th scope="col"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {{#each cart.products}}
+                            <tr>
+                                <td>
+                                    <a href="/products/{{product._id}}">
+                                        <img class="cartImage" src="{{this.product.thumbnail}}" alt="{{this.product.description}}">
+                                    </a>
+                                    
+                                </td>
+                                <td>{{this.product.name}}</td>
+                                <td>{{this.product.description}}</td>
+                                <td>${{this.product.price}}</td>
+                                <td>
+                                    <div class="btn-group" role="group" aria-label="Basic example">
+                                        <span class="mx-2">{{this.quantity}}</span>
+                                    </div>
+                                </td>
+                                <td>
+                                    <button type="button" class="btn" onclick="removeFromCart('{{this.product._id}}')"><i class="fa-solid fa-trash-can fa-lg" style="color: #ff0000;"></i></button>
+                                </td>
+                            </tr>
+                            {{/each}}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="text-center" style= "justify-content: center; display:flex">
+                <div class="col text-end">
+                    <a class="btn btn-info" href="/products">Seguir Comprando...</a>
+                </div>
+                <div class="col text-end">
+                    <button class="btn btn-danger" onclick="emptyCart()">Vaciar carrito</button>
+                </div>
+                <div class="col text-end">
+                    <button class="btn btn-success" onclick="#">Finalizar Compra (no hace nada)</button>
+                </div>
+            </div>
+        {{else}}
+            <h2 class="text-center mt-4">No tienes productos en tu carrito 😓</h2>
+        {{/if}}
+    </div>
 
-            <hr class="d-md-none text-white-50">
-
-            <!-- mercadoshops -->
-            <ul class="navbar-nav flex-wrap">
-                <button id="logoutButton">Cerrar sesión 👋</button>
-            </ul>
-        </div>
-    </div>  
-</nav>
+    <script src="/js/cart.js"></script>
+</body>
 
 <script src="/js/logOut.js"></script>
