--- a/src/views/partials/navbar.handlebars
+++ b/src/views/partials/navbar.handlebars
@@ -13,16 +13,11 @@
         </button>
 
         <!-- menu colapsable -->
-        <div class="collapse navbar-collapse" id="botonmenu">
+         <div class="collapse navbar-collapse" id="botonmenu">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
                     <a class="nav-link active" href="/">Inicio</a>
                 </li>
-                {{#if user}}
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/products">Productos</a>
-                    </li>
-                {{/if}}
                 {{#if (equals user.role "user")}}
                     <li class="nav-item dropdown">
                         <a class="nav-link active dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -37,6 +32,17 @@
                             <li><a class="dropdown-item" href="/products/category/Home Appliances">Home Appliances</a></li>
                             <li><a class="dropdown-item" href="/products/category/Stationery">Stationery</a></li>
                         </ul>
+                    </li>
+                {{/if}}
+                {{#if user}}
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/products">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/mockingProducts">mockingProducts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/loggertestview">loggerTest</a>
                     </li>
                 {{/if}}
                 {{#if (equals user.role "admin")}}
