--- a/src/views/partials/navbar.handlebars
+++ b/src/views/partials/navbar.handlebars
@@ -18,6 +18,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="/">Inicio</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/products">Productos</a>
+                </li>
                 {{#if (or (equals user.role "user") (equals user.role "premium"))}}
                     <li class="nav-item dropdown">
                         <a class="nav-link active dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -35,14 +38,21 @@
                     </li>
                 {{/if}}
                 {{#if user}}
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/products">Productos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/mockingProducts">mockingProducts</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/loggertestview">loggerTest</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Otros
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                            <li class="nav-item">
+                                <a class="dropdown-item" href="/mockingProducts">mockingProducts</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="dropdown-item" href="/loggertestview">loggerTest</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="dropdown-item" target="_blank" href="/api-docs">Swagger</a>
+                            </li>
+                        </ul>
                     </li>
                 {{/if}}
                 {{#if (equals user.role "admin")}}
@@ -81,11 +91,12 @@
                                 <li><a class="dropdown-item" href="/carts/{{user.cart._id}}">Carrito</a></li>
                                 <li><a class="dropdown-item" href="/chat">Envianos un mensaje!</a></li>
                                 <li><a class="dropdown-item" href="/purchases">Mis compras</a></li>
+                                <li><a class="dropdown-item" href="#"><del>Favoritos</del></a></li>
+                                <hr>
                                 {{#if (equals user.role "premium")}}
                                     <li><a class="dropdown-item" href="/adminAddProduct">Publicar un producto</a></li>
                                     <li><a class="dropdown-item" href="/adminViewAllProducts">Ver mis productos</a></li>
                                 {{/if}}
-                                <li><a class="dropdown-item" href="#"><del>Favoritos</del></a></li>
                                 {{#if (equals user.role "user")}}
                                     <li><a class="dropdown-item" href="/profile">Comenzar a vender!</a></li>
                                 {{/if}}
